--- a/src/pages/_layout.pug
+++ b/src/pages/_layout.pug
@@ -6,7 +6,7 @@ html(lang="en")
 		meta(charset="UTF-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(http-equiv="X-UA-Compatible", content="ie=edge")
-		link(href="https://fonts.googleapis.com/css?family=Cinzel:400,700,900|Titillium+Web" rel="stylesheet")
+		link(href="https://fonts.googleapis.com/css?family=Roboto:400,700|Source+Sans+Pro:900" rel="stylesheet")
 		link(rel="stylesheet", href="./css/global.min.css")
 		link(rel="stylesheet", href="./css/main.min.css")
 		title #{title}
