--- a/src/components/main.sass
+++ b/src/components/main.sass
@@ -3,11 +3,10 @@ html
 	&.active
 		overflow: hidden
 body
-	font-family: 'Titillium Web', sans-serif
+	font-family: 'Roboto', sans-serif
 	font-weight: 400
 	font-size: 16px
 	background: #fff
-	padding: 0 25px
 	@media (max-width: 992px)
 		padding: 0
 		font-size: 15px
