--- a/src/plugins/font.css
+++ b/src/plugins/font.css
@@ -86,3 +86,11 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
+@font-face {
+	font-family: 'amazoneBT';
+	src: url('../fonts/amazone-bt-regular.woff2') format('woff2'),
+		url('../fonts/amazone-bt-regular.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
