--- a/src/components/icons.sass
+++ b/src/components/icons.sass
@@ -70,6 +70,12 @@
 .mdi-account-supervisor-circle
 	&:before
 		content: '\fa8b'
+.mdi-map-marker
+	&:before
+		content: '\f34e'
+.mdi-car
+	&:before
+		content: '\f10b'
 /* ======= Linear Icons ======= */
 .lnr-arrow-up
 	&:before
@@ -123,3 +129,6 @@
 .fa-circle
 	&:before
 		content: '\f111'
+.fa-times
+	&:before
+		content: '\f00d'
