--- a/src/pages/_layout.pug
+++ b/src/pages/_layout.pug
@@ -18,5 +18,6 @@ html(lang="en")
 			block main
 		block footer
 			include ../components/footer/index.pug
+		include ../components/back-to-top/index.pug
 		script(src="./js/global.min.js")
 		script(src="./js/main.min.js")
