--- a/src/components/main.sass
+++ b/src/components/main.sass
@@ -7,6 +7,7 @@ body
 	font-weight: 400
 	font-size: 16px
 	background: #fff
+	position: relative
 	@media (max-width: 992px)
 		padding: 0
 		font-size: 15px
@@ -22,14 +23,49 @@ a
 	font-size: inherit
 	text-decoration: none !important
 img
+	display: block
+	margin: 0 auto
 	max-width: 100%
 	height: auto
 hr
 	margin: 0
 	border: .5px solid #D7D7D7
 
+ul
+	list-style: none
+	margin: 0
+	padding: 0
+
+.logo
+	text-align: center
+	h1
+		font-family: 'Source Sans Pro', sans-serif
+		font-size: 40px
+		white-space: nowrap
+		font-weight: 900
+		text-transform: uppercase
+		line-height: 1
+	p
+		font-family: 'amazoneBT'
+		font-size: 36px
+		line-height: 1
+		position: relative
+		margin-top: -10px
+	@media (max-width: 992px)
+		h1
+			font-size: 32px
+		p
+			font-size: 28px
+	@media (max-width: 576px)
+		h1
+			font-size: 24px
+		p
+			font-size: 20px
+
 @import "icons.sass"
 
 @import "header/index.sass"
 
 @import "footer/index.sass"
+
+@import "back-to-top/index.sass"
