Initial  product-detail

--- a/src/components/icons.sass
+++ b/src/components/icons.sass
@@ -76,6 +76,10 @@
 .mdi-car
 	&:before
 		content: '\f10b'
+
+.mdi-circle-medium
+	&:before
+		content: '\f9dd'
 /* ======= Linear Icons ======= */
 .lnr-arrow-up
 	&:before
