--- a/src/components/main.sass
+++ b/src/components/main.sass
@@ -66,6 +66,10 @@ ul
 
 @import "header/index.sass"
 
+@import "navbar/index.sass"
+
 @import "footer/index.sass"
 
 @import "back-to-top/index.sass"
+
+@import "product-detail/index.sass"
