--- a/src/pages/_layout.pug
+++ b/src/pages/_layout.pug
@@ -14,6 +14,7 @@ html(lang="en")
 	body(class=bodyClass)
 		block header
 			include ../components/header/index.pug
+		include ../components/navbar/index.pug
 		main
 			block main
 		block footer
