--- a/src/plugins/grid.css
+++ b/src/plugins/grid.css
@@ -108,7 +108,7 @@ label {
 	display: inline-block;
 	margin-bottom: 0.5rem;
 }
-
+/* 
 button {
 	border-radius: 0;
 }
@@ -116,8 +116,8 @@ button {
 button:focus {
 	outline: 1px dotted;
 	outline: 5px auto -webkit-focus-ring-color;
-}
-
+} */
+/* 
 input,
 button,
 select,
@@ -127,14 +127,14 @@ textarea {
 	font-family: inherit;
 	font-size: inherit;
 	line-height: inherit;
-}
+} */
 
-button,
+/* button,
 input {
 	overflow: visible;
-}
+} */
 
-button,
+/* button,
 select {
 	text-transform: none;
 }
@@ -163,7 +163,7 @@ button::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
 	padding: 0;
 	border-style: none;
-}
+} */
 
 input[type="radio"],
 input[type="checkbox"] {
