--- a/src/components/header/index.sass
+++ b/src/components/header/index.sass
@@ -1,11 +1,18 @@
 header
 	background: #FFCD18
+	position: fixed
+	top: 0
+	left: 0
+	width: 100%
+	z-index: 99
+	box-shadow: 0 0 10px 0 rgba(0, 0, 0, .3)
 	.qc-header
 		display: flex
 		.left
-			flex: 0 0 25%
-			max-width: 25%
+			flex: 0 0 30%
+			width: 30%
 			color: #FFF500
+			padding-left: 15px !important
 			font-weight: 700
 			text-align: right
 			position: relative
@@ -26,8 +33,8 @@ header
 			font-size: 20px
 		.right
 			display: flex
-			flex: 0 0 75%
-			max-width: 75%
+			flex: 0 0 70%
+			width: 70%
 			font-style: italic
 			color: #fff
 			padding-left: 30px
@@ -192,58 +199,6 @@ header
 				background-image: linear-gradient(#FFC000, #F6A501)
 				border-radius: 4px
 				margin-top: 15px
-	.navbar-header
-		background: #fff
-		box-shadow: 0 0 5px 0 rgba(0, 0, 0, .3)
-	.main-nav
-		display: flex
-		li
-			display: flex
-			align-items: center
-			position: relative
-		> li
-			padding: 15px
-			font-size: 13px
-			a
-				text-transform: uppercase
-				font-weight: 900
-			> a
-				color: #7b858a
-			&.active, &:hover
-				background: #F1F1F1
-				> a
-					color: #373737
-	.sub-nav
-		position: absolute
-		bottom: 0
-		top: 100%
-		left: 0
-		width: 170px
-		display: none
-		z-index: 20
-		&.active
-			display: block
-		li
-			padding: 15px
-			background: #FFCD18
-			border-left: 1px solid #FFCD18
-			border-right: 1px solid #FFCD18
-			&:first-child
-				border-top: 1px solid #FFCD18
-			&:last-child
-				border-bottom: 1px solid #FFCD18
-			&:hover, &.active
-				background: #fff
-				> a
-					color: #373737
-		.sub-nav
-			top: 0
-			left: 100%
-	.btn-dropdown
-		cursor: pointer
-		font-size: 20px
-		margin-left: 5px
-		color: #7b858a
 	.mobile-navbar
 		display: none
 	@media (max-width: 992px)
@@ -293,37 +248,80 @@ header
 						transform: rotate(-45deg)
 						top: 21.5px
 						left: 8px	
-		.mobile-navbar
-			display: block
-			background: #fff
-			width: 80%
-			height: 100vh
-			position: absolute
-			left: -100%
-			top: 0
-			z-index: 20
-			transition: all 1s ease-in-out
-			&.active
-				left: 0
-				box-shadow: 100vh 100vh 100vh 100vh rgba(0, 0, 0, .3)
-			.main-nav
-				li
-					display: block
-					border-bottom: 1px solid #f1f1f1
-			.sub-nav
-				width: 100%
-				position: static
-				li
-					border: none
-					background: transparent
 		.mobile-navbar-top
 			display: flex
 			padding: 15px
+			.mobile-hamburger
+				flex: 0 0 30px
+				max-width: 30px
+				height: 22.5px
 		.mobile-login
 			flex: 100%
 			text-align: center
 			span
 				margin: 0 10px
-		.mobile-nav
+		.mobile-navbar
+			display: block
+			background: #fff
+			width: 80%
+			height: 100vh
+			overflow: auto
+			position: fixed
+			left: -100%
+			top: 0
+			z-index: 20
+			transition: all 1s ease-in-out
+			&::-webkit-scrollbar
+				width: 8px
+			&::-webkit-scrollbar-track
+				background: #E5E5E5
+			&::-webkit-scrollbar-thumb
+				border-radius: 99px
+				background: rgba(#ff8308, 0.5)
+			&::-webkit-scrollbar-thumb:hover
+				background-image: linear-gradient(to right, #ffae00, #ff8308)
+			&.active
+				left: 0
+				box-shadow: 100vh 100vh 100vh 100vh rgba(0, 0, 0, .3)
 			.main-nav
-				display: block
+				.nav-title
+					padding: 15px
+					display: flex
+					align-items: center
+					justify-content: space-between
+					a
+						text-transform: uppercase
+						color: #7b858a
+					.btn-dropdown
+						width: 30px
+						height: 30px
+						position: relative
+						&:before
+							position: absolute
+							top: 50%
+							left: 50%
+							transform: translate(-50%, -50%)
+				.nav-content
+					display: none
+				.menu
+					margin: 0 15px
+					padding-bottom: 15px
+					border-bottom: 1px solid #ccc
+					li, .menu-title
+						padding: 7px 0
+					.menu-title
+						color: #5b5b5b
+						font-weight: 700
+						font-size: 95%
+					li
+						font-size: 90%
+						margin-left: 30px
+				li
+					&.active
+						.nav-title
+							background: #F1F1F1
+							border-top: 1px solid #ccc
+							border-bottom: 1px solid #ccc
+							a
+								font-weight: 700
+								color: #373737
