--- a/src/plugins/font.css
+++ b/src/plugins/font.css
@@ -94,3 +94,9 @@
 	font-weight: normal;
 	font-style: normal;
 }
+@font-face {
+	font-family: 'Helvetica-Neue-Bold';
+	src: url('../fonts/Helvetica-Neue-Bold.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
