Initial product-detail

--- a/src/components/icons.sass
+++ b/src/components/icons.sass
@@ -80,6 +80,10 @@
 .mdi-circle-medium
 	&:before
 		content: '\f9dd'
+
+.mdi-shield-check
+	&:before
+		content: '\f565'
 /* ======= Linear Icons ======= */
 .lnr-arrow-up
 	&:before
