--- a/src/components/product/product-detail/index.pug
+++ b/src/components/product/product-detail/index.pug
@@ -3,46 +3,47 @@ section.product-detail
 		.row
 			.col-md-6
 				.product-image
-					.swiper-container.gallery-thumbs
-						.swiper-wrapper
-							.swiper-slide
-								.box-img
-									img(src="./img/product/h01.jpg", alt="1")
-							.swiper-slide
-								.box-img
-									img(src="./img/product/h02.jpg", alt="1")
-							.swiper-slide
-								.box-img
-									img(src="./img/product/h03.jpg", alt="1")
-							.swiper-slide
-								.box-img
-									img(src="./img/product/h01.jpg", alt="1")
-							.swiper-slide
-								.box-img
-									img(src="./img/product/h02.jpg", alt="1")
-							.swiper-slide
-								.box-img
-									img(src="./img/product/h03.jpg", alt="1")
-					.swiper-container.gallery-main
-						.swiper-wrapper
-							.swiper-slide
-								.box-img
-									img(src="./img/product/h01.jpg", alt="1")
-							.swiper-slide
-								.box-img
-									img(src="./img/product/h02.jpg", alt="1")
-							.swiper-slide
-								.box-img
-									img(src="./img/product/h03.jpg", alt="1")
-							.swiper-slide
-								.box-img
-									img(src="./img/product/h01.jpg", alt="1")
-							.swiper-slide
-								.box-img
-									img(src="./img/product/h02.jpg", alt="1")
-							.swiper-slide
-								.box-img
-									img(src="./img/product/h03.jpg", alt="1")
+					.gallery-thumbs
+						.swiper-container
+							.swiper-wrapper
+								.swiper-slide
+									.box-img
+										img(src="./img/product/h01.jpg", alt="1")
+								.swiper-slide
+									.box-img
+										img(src="./img/product/h02.jpg", alt="1")
+								.swiper-slide
+									.box-img
+										img(src="./img/product/h03.jpg", alt="1")
+								.swiper-slide
+									.box-img
+										img(src="./img/product/h03.jpg", alt="1")
+								.swiper-slide
+									.box-img
+										img(src="./img/product/h03.jpg", alt="1")
+						.navigation
+							.btn-prev
+								img(src="./img/icon-select-left.png", alt="left")
+							.btn-next
+								img(src="./img/icon-select-right.png", alt="right")
+					.gallery-main
+						.swiper-container
+							.swiper-wrapper
+								.swiper-slide
+									.box-img
+										img(src="./img/product/h01.jpg", alt="1")
+								.swiper-slide
+									.box-img
+										img(src="./img/product/h02.jpg", alt="1")
+								.swiper-slide
+									.box-img
+										img(src="./img/product/h03.jpg", alt="1")
+								.swiper-slide
+									.box-img
+										img(src="./img/product/h03.jpg", alt="1")
+								.swiper-slide
+									.box-img
+										img(src="./img/product/h03.jpg", alt="1")
 			.col-md-6
 				.product-info
 					h2 Nashville Tele Honey Blonde
@@ -108,3 +109,12 @@ section.product-detail
 							input(type="text" placeholder="Điện thoại")
 							input(type="email" placeholder="Email")
 							button(type="submit")
+					.product-contact-2
+						p
+							img(src="./img/icon-phone.png", alt="icon-phone")
+							| Gọi đặt mua:
+							span 0909046613
+							| (08:00-20:00)
+						p
+							img(src="./img/icon-car.png", alt="icon-car")
+							| Miễn phí giao hàng: TP.HCM, Biên Hòa
