--- a/src/components/product/product-detail/index.sass
+++ b/src/components/product/product-detail/index.sass
@@ -1,9 +1,88 @@
+.product-rate
+	display: flex
+	align-items: center
+	justify-content: flex-start
+	margin-bottom: 10px
+	img
+		margin: 0
+	a
+		margin-left: 5px
+		line-height: 1
+		color: #9a9a9a
+		font-size: 11px
+.product-price
+	display: flex
+	align-items: center
+	line-height: 1
+	margin-bottom: 10px
+	div:not(:last-child)
+		margin-right: 20px
+	.price-new
+		font-size: 24px
+		font-weight: 700
+		color: #545454
+	.price-old
+		text-decoration: line-through
+		font-size: 14px
+		color: #999999
+	.price-new, .price-old
+		position: relative
+		&:after
+			content: '\20AB'
+			font-size: 70%
+			position: absolute
+			top: 0
+	.discount
+		color: #2c2c2c
+		font-size: 12px
+		padding: 2px 5px
+		background: #FFCD18
+		border-radius: 3px
+.product-buy
+	margin-bottom: 10px
+	display: flex
+	.btn-buynow
+		margin-right: 15px
+		background-image: linear-gradient(#FFAE00, #FF8308)
+	.btn-buynow, .btn-installment
+		width: 100%
+		padding: 10px 5px
+		color: #fff
+		border-radius: 4px
+		border: none
+		outline: none
+		cursor: pointer
+		h4
+			text-transform: uppercase
+			font-size: 18px
+			font-weight: 700
+		span
+			font-size: 12px
+	.btn-installment
+		background-image: linear-gradient(#FEBE00, #F5A301)
+.product-contact-2
+	p
+		display: flex
+		align-items: center
+	img
+		display: inline
+		margin: 0
+		margin-right: 5px
+	span 
+		font-weight: 700
+		color: #FF8907
+		margin: 0 3px
+	
 .product-detail
+	padding: 60px 0
 	.product-image
 		display: flex
 		margin-bottom: 30px
-		.gallery-thumbs,
-		.gallery-main
+		.box-img
+			display: flex
+			align-items: center
+			justify-content: center
+		.swiper-container
 			height: 400px
 		.gallery-thumbs
 			flex: 0 0 100px
@@ -14,65 +93,28 @@
 				overflow: hidden
 				border: 1px solid #ECECEC
 				border-radius: 4px
+			.swiper-container
+				.swiper-slide-thumb-active
+					.box-img
+						border: 1px solid #FFCD18
+						box-shadow: 0 0 5px 0 rgba(#FFCD18, .5)
+			.swiper-slide
 				display: flex
-				align-items: center
 				justify-content: center
-			.swiper-slide-thumb-active
-				.box-img
-					border: 2px solid #FFCD18
+				align-items: center
+			.navigation
+				display: none
 		.gallery-main
 			flex: 0 0 calc(100%-100px)
 			max-width: calc(100%-100px)
 			margin-left: 15px
 			.box-img
 				height: 400px
-				display: flex
-				align-items: center
-				justify-content: center
 	.product-info
 		h2
 			font-size: 30px
-			margin-bottom: 10px
-	.product-rate
-		display: flex
-		align-items: center
-		justify-content: flex-start
-		margin-bottom: 10px
-		img
-			margin: 0
-			margin-right: 3px
-		a
 			line-height: 1
-			color: #9a9a9a
-			font-size: 11px
-	.product-price
-		display: flex
-		align-items: center
-		line-height: 1
-		margin-bottom: 10px
-		div:not(:last-child)
-			margin-right: 20px
-		.price-new
-			font-size: 24px
-			font-weight: 700
-			color: #545454
-		.price-old
-			text-decoration: line-through
-			font-size: 14px
-			color: #999999
-		.price-new, .price-old
-			position: relative
-			&:after
-				content: '\20AB'
-				font-size: 70%
-				position: absolute
-				top: 0
-		.discount
-			color: #2c2c2c
-			font-size: 12px
-			padding: 2px 5px
-			background: #FFCD18
-			border-radius: 3px
+			margin-bottom: 10px
 	.product-hot-discount
 		width: 300px
 		border-radius: 4px
@@ -197,28 +239,6 @@
 			input
 				width: 40px
 				padding: 0 10px
-	.product-buy
-		margin-bottom: 10px
-		display: flex
-		.btn-buynow
-			margin-right: 15px
-			background-image: linear-gradient(#FFAE00, #FF8308)
-		.btn-buynow, .btn-installment
-			width: 100%
-			padding: 10px 50px
-			color: #fff
-			border-radius: 4px
-			border: none
-			outline: none
-			cursor: pointer
-			h4
-				text-transform: uppercase
-				font-size: 18px
-				font-weight: 700
-			span
-				font-size: 12px
-		.btn-installment
-			background-image: linear-gradient(#FEBE00, #F5A301)
 	.product-contact
 		margin-bottom: 10px
 		p
@@ -254,10 +274,8 @@
 					border-color: #FF8308
 					box-shadow: 0 0 5px 0 #FF8308
 				&:nth-child(1)
-					flex: 0 0 150px
 					max-width: 150px
 				&:nth-child(2)
-					flex: 0 0 100px
 					max-width: 100px
 			button
 				flex: 0 0 60px
@@ -278,3 +296,82 @@
 					top: 50%
 					left: 50%
 					transform: translate(-50%, -50%)
+	@media (max-width: 767.98px)
+		.product-image
+			flex-direction: column-reverse
+			.swiper-container
+				height: auto
+			.gallery-main
+				margin: 0
+				max-width: 100%
+				.box-img
+					height: 300px
+			.gallery-thumbs
+				flex: 0 0 100%
+				max-width: 100%
+				position: relative
+				.box-img
+					margin: 0
+				.navigation
+					display: block
+					.btn-prev, .btn-next
+						width: 30px
+						height: 30px
+						border-radius: 99px
+						background: rgba(#000, .3)
+						display: flex
+						align-items: center
+						justify-content: center
+						position: absolute
+						top: 50%
+						transform: translateY(-50%)
+						outline: none
+						z-index: 9
+					.btn-prev
+						left: 0
+					.btn-next
+						right: 0
+	@media (max-width: 575.98px)
+		padding: 15px 0
+		.product-image
+			.gallery-thumbs
+				.box-img
+					width: 60px
+					height: 60px
+		.product-hot-discount
+			width: 100%
+		.product-branch
+			.custom-select
+				width: 100%
+				border: 1px solid #ccc
+				background-position-x: 98%
+				padding-left: 15px
+		.product-brief-info
+			padding: 0
+			border: none
+			li
+				margin-bottom: 5px
+		.product-buy
+			flex-wrap: wrap
+			.btn-buynow
+				margin-right: 0
+				margin-bottom: 15px
+		.product-contact
+			a
+				padding-left: 15px
+				font-size: 13px
+			.contact-group
+				flex-wrap: wrap
+				input, button
+					margin-right: 0
+					margin-bottom: 15px
+				input
+					&:nth-child(1)
+						max-width: 65%
+					&:nth-child(2)
+						max-width: 30%
+					&:nth-child(3)
+						max-width: calc(100%-70px)
+		.product-contact-2
+			p
+				margin-bottom: 5px
