--- a/src/components/icons.sass
+++ b/src/components/icons.sass
@@ -84,6 +84,12 @@
 .mdi-shield-check
 	&:before
 		content: '\f565'
+.mdi-view-sequential
+	&:before
+		content: '\f728'
+.mdi-view-list
+	&:before
+		content: '\f572'
 /* ======= Linear Icons ======= */
 .lnr-arrow-up
 	&:before
@@ -118,6 +124,9 @@
 .lnr-envelope
 	&:before
 		content: '\e818'
+.lnr-home
+	&:before
+		content: '\e800'
 
 
 /* ======= Font Awesome ======= */
