--- a/src/components/main.sass
+++ b/src/components/main.sass
@@ -75,6 +75,8 @@ ul
 
 @import "icons.sass"
 
+@import "breadcrumb/index.sass"
+
 @import "admin/index.sass"
 
 @import "header/index.sass"
@@ -92,3 +94,5 @@ ul
 @import "product/product-full-content/index.sass"
 
 @import "product/product-rating/index.sass"
+
+@import "product/product-list/index.sass"
