--- a/src/components/menu/index.pug
+++ b/src/components/menu/index.pug
@@ -9,7 +9,7 @@ section.menu-container
 								a(href="#") Trang chủ
 						li.active
 							.nav-title
-								a(href="https://www.google.com/") Danh mục sản phẩm
+								a(href="#") Danh mục sản phẩm
 								span.mdi.mdi-chevron-down.btn-dropdown
 							.nav-content
 								-for(i = 0; i < 5; i++)
