--- a/src/components/product/product-full-content/index.sass
+++ b/src/components/product/product-full-content/index.sass
@@ -57,6 +57,8 @@
 		background: none
 		border-radius: 4px
 		border: 1px solid #F5A301
+	.readmore-thong-so
+		display: none
 	.content-commitment
 		border-radius: 4px
 		border: 1px solid #ff8907
@@ -147,9 +149,11 @@
 					td
 						margin-top: 5px
 				.item-content
-					height: 300px
+					// height: 300px
 					overflow: hidden
 					padding-bottom: 0
+			.readmore-thong-so
+				display: block
 		.product-info-mini
 			flex-direction: column
 			background: #fff
