--- a/src/components/product/product-rating/index.pug
+++ b/src/components/product/product-rating/index.pug
@@ -57,7 +57,8 @@ section.product-rating
 								.bought
 									p.mdi.mdi-shield-check Đã mua sản phẩm
 								.main-content
-									.content-wrap.limited
+									.content-wrap
+										p Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut ut vel eius necessitatibus quia, suscipit odit sapiente facere quasi corporis facilis? Quibusdam nihil, amet dicta, totam veritatis provident accusamus error mollitia placeat quo numquam? Omnis porro iste aspernatur asperiores necessitatibus dicta odio blanditiis quidem quam. Maiores odit perferendis cum recusandae distinctio illum vero possimus excepturi, enim nesciunt eveniet accusamus, perspiciatis nihil mollitia, quam harum autem natus error a! Alias, veniam?
 										p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore itaque tempora suscipit laboriosam architecto, officia quaerat id provident vel delectus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod harum temporibus cupiditate! Assumenda velit suscipit dignissimos similique quos! Eveniet corrupti et quaerat praesentium corporis similique veritatis nesciunt totam eius quia.
 										p Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, minus omnis? Id perspiciatis doloremque optio eos quisquam animi, vel consequatur numquam distinctio hic soluta, ab itaque? Doloremque amet modi beatae!
 									.readmore Đọc tiếp
