--- a/src/components/product/product-detail/index.sass
+++ b/src/components/product/product-detail/index.sass
@@ -74,7 +74,7 @@
 		margin: 0 3px
 	
 .product-detail
-	padding: 60px 0
+	padding: 0 0 60px
 	.product-image
 		display: flex
 		margin-bottom: 30px
@@ -236,9 +236,41 @@
 				margin: 0
 			button
 				width: 30px
+				background: #fff
+				font-weight: 700
+				cursor: pointer
+				&:first-child
+					border-top-left-radius: 4px
+					border-bottom-left-radius: 4px
+				&:last-child
+					border-top-right-radius: 4px
+					border-bottom-right-radius: 4px
 			input
+				border-right: none
+				border-left: none
+				text-align: center
 				width: 40px
 				padding: 0 10px
+		.stored
+			color: #ccc
+			font-size: 13px
+	.product-out-of-stock
+		margin-bottom: 10px
+		button
+			background-image: linear-gradient(#FF7200, #EA4E01)
+			width: 100%
+			padding: 10px 5px
+			color: #fff
+			border-radius: 4px
+			border: none
+			outline: none
+			cursor: pointer
+			h4
+				text-transform: uppercase
+				font-size: 18px
+				font-weight: 700
+			span
+				font-size: 12px
 	.product-contact
 		margin-bottom: 10px
 		p
