--- a/src/components/product/product-rating/index.sass
+++ b/src/components/product/product-rating/index.sass
@@ -117,8 +117,6 @@
 						margin-left: 10px
 				.main-content
 					font-size: 15px
-					.readmore
-						display: none
 					.box-img
 						margin-top: 10px
 						width: 80px
@@ -130,6 +128,15 @@
 							width: 100%
 							height: 100%
 							object-fit: cover
+					.content-wrap
+						font-size: 13px
+						height: 55px
+						overflow: hidden
+					.readmore
+						cursor: pointer
+						display: block
+						font-size: 13px
+						color: #FF8907
 	@media (max-width: 767.98px)
 		background: #ffffff
 		h3
@@ -172,21 +179,21 @@
 					.rated, .bought
 						display: none
 					.main-content
-						.content-wrap
-							font-size: 13px
-							height: auto
-							&.limited
-								height: 55px
-								overflow: hidden
-								display: -webkit-box
-								text-overflow: ellipsis
-								-webkit-line-clamp: 3
-								-webkit-box-orient: vertical
-						.readmore
-							display: block
-							font-size: 15px
-							color: #FF8907
 						.box-img
 							margin-top: 10px
 							width: 50px
 							height: 50px
+					// 	.content-wrap
+					// 		font-size: 13px
+					// 		height: auto
+					// 		&.limited
+					// 			height: 55px
+					// 			overflow: hidden
+					// 			display: -webkit-box
+					// 			text-overflow: ellipsis
+					// 			-webkit-line-clamp: 3
+					// 			-webkit-box-orient: vertical
+					// 	.readmore
+					// 		display: block
+					// 		font-size: 13px
+					// 		color: #FF8907
