--- a/src/components/product/product-similar/index.pug
+++ b/src/components/product/product-similar/index.pug
@@ -33,7 +33,8 @@ section.product-similar
 										.price-old 35,020,000
 									button.add-to-cart
 										img(src="./img/cart.png", alt="cart")
-										p Thêm vào giỏ hàng
+										p Thêm 
+											span vào giỏ hàng
 				.pagination
 				.navigation
 					.btn-prev
