--- a/src/pages/product-detail.pug
+++ b/src/pages/product-detail.pug
@@ -5,6 +5,7 @@ block var
 	- var bodyClass = 'product-detail-page'
 
 block main
+	include ../components/breadcrumb/index.pug
 	include ../components/product/product-detail/index.pug
 	hr
 	include ../components/product/product-similar/index.pug
