--- a/src/components/home/experience/index.pug
+++ b/src/components/home/experience/index.pug
@@ -6,13 +6,18 @@ section.experience
 		.row
 			.col-lg-6
 				.ex-left
-					img(src="./img/home/img-news.jpg", alt="img-news")
-					h4 Workshop Piano Roland Music In Life
+					a(href="")
+						img(src="./img/home/img-news.jpg", alt="img-news")
+					h4
+						a(href="#") Workshop Piano Roland Music In Life
 					p Với mục đích giao lưu và chia sẻ kinh nghiệm về Piano Roland, Việt Thương Music tổ chức Workshop Piano "Roland Music In Life" kết nối mọi người với niềm đam mê và yêu thích nhạc cụ Roland.
 			.col-lg-6
 				-for(i = 0; i < 3; i++)
 					.ex-right
-						img(src="./img/home/img-news1.jpg", alt="img-news")
-						div
-							p Cung Chúc Tân Xuân - Xuân Kỷ hợi 2019
+						.ex-right-img
+							a(href="")
+								img(src="./img/home/img-news1.jpg", alt="img-news")
+						.ex-right-content
+							p 
+								a(href="#") Cung Chúc Tân Xuân - Xuân Kỷ hợi 2019
 							span Với mục đích giao lưu và chia sẻ kinh nghiệm về Piano Roland, Việt Thương Music tổ chức Workshop...
