--- a/src/components/home/experience/index.sass
+++ b/src/components/home/experience/index.sass
@@ -21,9 +21,13 @@ section.experience
 					color:#9c9c9c
 			.ex-right
 				display: flex
-				img
-					margin:0 20px 23px 0
-				div
+				margin-bottom: 10px
+				.ex-right-img
+					width:100%
+					a
+						img
+							height: 112px
+				.ex-right-content
 					p
 						font-size: 16px
 						color:#3b3b3b
@@ -38,7 +42,8 @@ section.experience
 			.ex-right
 				div
 					p
-						font-size: 14px
+						a
+							font-size: 14px
 					span
 						display: none
 		@media (max-width: 768px)
