--- a/src/components/home/home-item/index.pug
+++ b/src/components/home/home-item/index.pug
@@ -17,15 +17,20 @@ section.home-item
 					nav.tab-product
 						ul
 							li
-								p Piano
+								a(href="#tab1")
+									p Piano
 							li
-								p Guitar
+								a(href="#tab2")
+									p Guitar
 							li
-								p Sản phẩm mới
+								a(href="#tab3")
+									p Sản phẩm mới
 							li
-								p Violon Suzuki
+								a(href="#tab4")
+									p Violon Suzuki
 							li
-								p Đàn Violon
+								a(href="#tab5")
+									p Đàn Violon
 	.home-item-content
 		.container.product-container
 			-for(i = 0; i < 6; i++)
