--- a/src/components/home/home-item/index.sass
+++ b/src/components/home/home-item/index.sass
@@ -37,9 +37,10 @@
 	nav.tab-product
 		padding-top: 3px
 		ul
-			max-width: 80%
 			display: flex
 			margin-top: 27px
+			flex-wrap: wrap
+			justify-content: center
 			li
 				p
 					padding:0 0
@@ -49,9 +50,11 @@
 					margin-right:5px
 					font-size: 13px
 					border-radius: 3px
+					margin-bottom: 5px
 					&:hover
 						background-color: #f1c00e
 						color: #000
+						cursor: pointer
 .home-item
 	.product-container
 		display: flex
