--- a/src/components/home/slider/index.sass
+++ b/src/components/home/slider/index.sass
@@ -14,3 +14,29 @@
 			img
 				width: 100%
 				margin: 0
+		.bottom-swiper
+			display: none
+		.swiper-pagination-progressbar 
+			display: none
+	@media (max-width: 1200px)
+		.top-swiper
+			.swiper-wrapper
+				.swiper-slide
+					.box-img
+						img
+							width: 100%
+	.swiper-container-horizontal
+		.swiper-pagination-progressbar
+			bottom: 0
+			top: auto
+	.swiper-pagination-progressbar 
+		.swiper-pagination-progressbar-fill
+			background: #ffcd18
+	.bottom-swiper
+		.swiper-wrapper
+			.swiper-slide
+				p 
+					text-align: center
+					font-size: 12px
+					border: 1px solid #e5e5e5
+					padding:5px 10px
