--- a/src/components/main.sass
+++ b/src/components/main.sass
@@ -74,6 +74,7 @@ ul
 			font-size: 20px
 
 .product-item
+	display: none
 	.box-img
 		overflow: hidden
 		height: 260px
@@ -160,7 +161,8 @@ ul
 			a
 				max-width: 100%
 				margin: 5px 0 0
-
+.show
+	display: block
 @import "icons.sass"
 
 @import "breadcrumb/index.sass"
@@ -192,3 +194,5 @@ ul
 @import "home/home-item/index.sass"
 
 @import "home/experience/index.sass"
+
+@import "pro-category/index.sass"
