--- a/src/components/home/home-item/index.pug
+++ b/src/components/home/home-item/index.pug
@@ -17,24 +17,24 @@ section.home-item
 					nav.tab-product
 						ul
 							li
-								a(href="#tab1")
+								a(href="#").home-tab
 									p Piano
 							li
-								a(href="#tab2")
+								a(href="#").home-tab
 									p Guitar
 							li
-								a(href="#tab3")
+								a(href="#").home-tab
 									p Sản phẩm mới
 							li
-								a(href="#tab4")
+								a(href="#").home-tab
 									p Violon Suzuki
 							li
-								a(href="#tab5")
+								a(href="#").home-tab
 									p Đàn Violon
 	.home-item-content
 		.container.product-container
 			-for(i = 0; i < 6; i++)
-				.product-item
+				.product-item.piano
 					.box-img
 						.new Mới
 						a(href="#")
@@ -61,5 +61,32 @@ section.home-item
 						img(src="./img/cart.png", alt="cart")
 						p Thêm 
 							span vào giỏ hàng
+			.product-item.guitar
+				.box-img
+					.new Mới
+					a(href="#")
+						img(src="./img/product/h01.jpg", alt="1")
+				.hot-deal-weekend.active
+					a(href="#")
+						img(src="./img/product/hot-deal-weekend.png", alt="1")
+				.product-rate
+					img(src="./img/star-on.png", alt="star-on")
+					img(src="./img/star-on.png", alt="star-on")
+					img(src="./img/star-on.png", alt="star-on")
+					img(src="./img/star-on.png", alt="star-on")
+					img(src="./img/star-off.png", alt="star-off")
+					a(href="#") 17 đánh giá
+				.logo-brand
+					a(href="#")
+						img(src="./img/product/logo-brand.png", alt="1")
+				.product-name
+					a(href="#") Scherl & Roth SR46E3CFH
+				.product-price
+					.price-new 29,234,000
+					.price-old 35,020,000
+				button.add-to-cart
+					img(src="./img/cart.png", alt="cart")
+					p Thêm 
+						span vào giỏ hàng
 	.home-item-bot
 		a(href="#") Xem thêm 25 sản phẩm
