--- a/src/components/product/product-rating/index.pug
+++ b/src/components/product/product-rating/index.pug
@@ -35,7 +35,7 @@ section.product-rating
 								.box-img
 									img(src="./img/comment/avatar.png", alt="1")
 								.profile
-									name
+									span
 										a(href="#") Lộc Thành
 									time 1 ngày trước
 									.rated
