--- a/src/components/product/product-rating/index.sass
+++ b/src/components/product/product-rating/index.sass
@@ -98,7 +98,7 @@
 						width: 100%
 						height: 100%
 						object-fit: cover
-				name, time
+				span, time
 					display: block
 					line-height: 1
 				time
@@ -169,9 +169,9 @@
 					.box-img
 						margin: 0
 						margin-right: 10px
-					name, time
+					span, time
 						display: inline-block
-					name
+					span
 						font-weight: 700
 					.bought
 						display: block
