--- a/src/components/header/index.pug
+++ b/src/components/header/index.pug
@@ -75,5 +75,5 @@ header
 								.item-payment
 									p Thành tiền
 										span 1.234.000đ
-									a(href="#").btn-thanhtoan Xem giỏ hàng
+									a(href="shopping-cart.html").btn-thanhtoan Xem giỏ hàng
 	include ../menu/index.pug
