giohang+dang nhap

--- a/src/components/header/index.pug
+++ b/src/components/header/index.pug
@@ -10,8 +10,12 @@ header
 		.container
 			.row
 				.col
-					a(href="#") Đăng nhập
-					a(href="#") Tạo tài khoản
+					a(data-fancybox="" data-src="#formDN" href="javascript:;").btnDN Đăng nhập
+						#formDN
+							h2 dang nhap thanh cong!
+					a(data-fancybox="" data-src="#formTTK" href="javascript:;").btnTTK Tạo tài khoản
+						#formTTK
+							h2 Dang ki thanh cong!
 	.mobile
 		.container
 			.row
