--- a/src/components/header/index.sass
+++ b/src/components/header/index.sass
@@ -74,6 +74,11 @@ header
 				line-height: 1
 				&:first-child
 					margin-right: 30px
+			#formDN
+				display: none
+			#formTTK
+				display: none
+				
 	.line-header
 		background: #fed645
 		height: 1px
