--- a/src/components/shopping-cart/index.pug
+++ b/src/components/shopping-cart/index.pug
@@ -8,6 +8,7 @@ section.shopping-cart
 					.row
 						.img-cart.col-lg-3
 							img(src="../img/shopping-cart/product.jpg", alt="Sanpham")
+							a(href="#").fa-times-circle Xóa
 						.detail-cart.col-lg-6
 							h4 Kolher &Sacmbell KC115D
 							p -Tặng ngay ghế đàn,ống sưởi,khăn phủ kín
@@ -26,9 +27,9 @@ section.shopping-cart
 									button.increment +
 				.total
 					.row
-						.total-left.col-lg-8
+						.total-left.col-lg-8.col-md-6.col-sm-6
 							p Tổng tiền:
-						.total-right.col-lg-4
+						.total-right.col-lg-4.col-md-6.col-sm-6
 							p 59.992.000 đ
 							a(href="#") Sử dụng mã giảm giá
 				.custommer-info
